--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,20 @@
 <html>
+<head>
+	<script src="js/msm_client.js"></script>
+	<script>
+		var msmclient = new MSMClient();
+		function testCrypto(){
+			var password = document.getElementById("tohash").value;
+			msmclient.authenticate(password);
+		}
+	</script>
+</head>
 <body>
 	<h1>Hello!</h1>
+	<div>
+		<input type="text" id="tohash" /><br />
+		<button name="hashbutton" onclick="testCrypto()">Submit</button><br />
+		Result is: <span id="result"></span>
+	</div>
 </body>
 </html>
