--- a/public/testbootstrap.html
+++ b/public/testbootstrap.html
@@ -10,12 +10,33 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/layout.css">
+		<style>
+			html,body{
+				height: 100%;
+			}
+			.fill{
+				flex: 1;
+			}
+		</style>
 	</head>
-	<body class="login">
-		<div id="main" hidden=true>
-			<h1>Hello, world!</h1>
+	<!-- <body class="login"> -->
+	<body>
+		<div id="main" class="container-fluid d-flex h-100 flex-column">
+			<nav><h1>testing</h1></nav>
+			<div class="row fill d-flex">
+				<nav class="col-sm-3 col-md-2 bg-faded">
+					<ul class="nav nav-pills flex-column" id="serverList">
+						<li class="nav-item">
+							<a class="nav-link" href="#">Testing 1</a>
+						</li>
+					</ul>
+				</nav>
+				<main class="col-sm-9 col-md-10">
+					<h1>Hello, world!</h1>
+				</main>
+			</div>
 		</div>
-		<div class="container" id="login">
+		<div class="container" id="login" hidden=true>
 			<div class="form-signin">
 				<h1 class="text-center">Please sign in</h1>
 				<input type="password" id="loginPassword" class="form-control" />
