--- a/public/testbootstrap.html
+++ b/public/testbootstrap.html
@@ -7,36 +7,18 @@
 		<title>Minecraft Server Maintainer</title>
 		
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/layout.css">
 		<style>
-			html,body{
-				height: 100%;
-			}
-			.fill{
-				flex: 1;
+			.sidebar{
+				padding: 0;
 			}
 		</style>
 	</head>
-	<!-- <body class="login"> -->
-	<body>
-		<div id="main" class="container-fluid d-flex h-100 flex-column">
-			<nav><h1>testing</h1></nav>
-			<div class="row fill d-flex">
-				<nav class="col-sm-3 col-md-2 bg-faded">
-					<ul class="nav nav-pills flex-column" id="serverList">
-						<li class="nav-item">
-							<a class="nav-link" href="#">Testing 1</a>
-						</li>
-					</ul>
-				</nav>
-				<main class="col-sm-9 col-md-10">
-					<h1>Hello, world!</h1>
-				</main>
-			</div>
-		</div>
-		<div class="container" id="login" hidden=true>
+	<body class="login">
+		<div class="container" id="login">
 			<div class="form-signin">
 				<h1 class="text-center">Please sign in</h1>
 				<input type="password" id="loginPassword" class="form-control" />
@@ -51,7 +33,8 @@
 		<!-- jQuery first, then Tether, then Bootstrap JS. -->
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script> -->
+		<script src="bootstrap/js/bootstrap.js"></script>
 		<script src="js/msm_client.js"></script>
 		<script src="js/msm_main.js"></script>
 	</body>
